test/pass/AnonymVar.curry
-- NEW: Anonymous variable
{-# LANGUAGE AnonFreeVars #-}

f _ = _

g x = _ + x

h x = _ + x + _
